# avr-eeprom

./: .gitignore  Cargo.toml  readme.md
examples/avr/: .gitignore  Cargo.toml  avr_hw_i2c_ssd1306_display.pdsprj  readme.md  ssd1306_eeprom.hex  ssd1306eeprom.toml
examples/avr/src/: main.rs
examples/avr/src/testdata/: range.txt
src/: avreeprom.rs  ep.rs  lib.rs
