[package]
name = "avr-eeprom"
version = "0.1.0"
edition = "2021"
keywords = ["avr", "eeprom"]

[dependencies]
cfg-if = "1.0.0"
embedded-storage = "0.2"

avr-device = { version = "0.3", features = ["device-selected"]}

#[profile.dev]
#lto       = true
#opt-level = 1
#
#[profile.release]
#lto       = true

[dev-dependencies]
ufmt = "0.1.0"
avr-device = { version = "0.3", features = ["atmega328p"]}

